# parser

./: Jenkinsfile  Viewer  configure.ac  parser.l  parser.y
.gitea/workflows/: build_pipeline.yaml
app-defaults/: Viewer  ax.xbm  ax.xpm  viewer.desktop
etc/: colors.txt  commands.txt  help.txt
src/: Makefile  Makefile.am  parser.h  parser.l  parser.y  test  viewer.c  viewer.h
sym/: anlagen.sym  beam.sym  heizung.sym  home.sym  pfeile.sym  plain.sym  projekt.sym  rechner.sym  regler.sym  strom40.sym  strom60.sym  test.sym  uebergaenge.sym
